Pegando o direcional do teclado

--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
         body {
             background-color: black;
         }
+
+        canvas{
+            background-color: white;
+        }
     </style>
+
     
 </head>
 
 <body>
-    <canvas></canvas>  
+    <canvas id="canvas-01"></canvas>  
     <script src="./index.js"></script>    
 </body>
 </html>
